feat: Update language translations for services and invoices

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -166,6 +166,8 @@
 	"paymentFailedMessage": "Sorry, your payment was not processed successfully. Please try again later.",
 	"allUsers": "All Users",
 	"general": "General",
+	"services": "Services",
+	"invoices": "Invoices",
 
 	"validation": {
 		"thisFieldIsRequired": "This field is required",
