Actualizar traducciones de facturas en archivos de idioma

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -181,6 +181,8 @@
 	"paid": "Paid",
 	"unpaid": "Unpaid",
 	"partial": "Partial",
+	"invoiceNumber": "Invoice Number",
+	"totalAmount": "Total Amount",
 
 	"validation": {
 		"thisFieldIsRequired": "This field is required",
