feat: Update translation for 'updateRecord' key in en.json and es.json

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -87,6 +87,7 @@
 	"recordFound": "Registro encontrado",
 	"recordNotFound": "Registro no encontrado",
 	"errorAsOccurred": "Ha ocurrido un error",
+	"updateRecord": "Actualizar registro",
 	"deleteRecord": "Eliminar registro",
 	"deleteConfirmation": "¿Estás seguro de que quieres borrar este registro?",
 	"preferences": "Preferencias",
