--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -87,6 +87,7 @@
 	"recordFound": "Record found",
 	"recordNotFound": "Record not found",
 	"errorAsOccurred": "An error has occurred",
+	"updateRecord": "Update Record",
 	"deleteRecord": "Delete Record",
 	"deleteConfirmation": "Are you sure you want to delete this record?",
 	"preferences": "Preferences",
