feat: Update translation for 'pay' key in en.json and es.json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -136,6 +136,7 @@
 	"packages": "Packages",
 	"package": "Package",
 	"subscriptions": "Subscriptions",
+	"pay": "Pay",
 	"pay_with": "Pay with",
 	"downloadInvoice": "Download Invoice",
 	"cancelSubscription": "Cancel Subscription",
