--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -136,6 +136,7 @@
 	"packages": "Paquetes",
 	"package": "Paquete",
 	"subscriptions": "Suscripciones",
+	"pay": "Pagar",
 	"pay_with": "Pagar con",
 	"downloadInvoice": "Descargar factura",
 	"cancelSubscription": "Cancelar suscripción",
