refactor: Actualizar archivos de traducción para agregar la clave "mail"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -192,6 +192,7 @@
 	"logo": "Logo",
 	"favicon": "Favicon",
 	"youDoNotHavePermission": "You do not have permission to perform this action",
+	"mail": "Mail",
 
 	"validation": {
 		"thisFieldIsRequired": "This field is required",
