refactor: Agregar traducción para "Payment Gateway" en los archivos de idioma

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -193,6 +193,7 @@
 	"favicon": "Favicon",
 	"youDoNotHavePermission": "You do not have permission to perform this action",
 	"mail": "Mail",
+	"paymentGateway": "Payment Gateway",
 
 	"validation": {
 		"thisFieldIsRequired": "This field is required",
